# generators_iterators_learning

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
generators_iterators_learning/: generator_fibonacci.py  generator_image_with_n_non_ignore_person.py  generator_image_with_night.py  white_noise_generator.py
generators_iterators_learning/utils/: common.py  meta.py
