[tool.poetry]
name = "generators-iterators-learning"
version = "0.1.0"
description = ""
authors = ["Харитонова Анна <sykes01@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.1"
numpy = "1.24.4"
opencv-python = "4.9.0.80"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
ignore = ["W503", "F811", "E722"]
max-line-length = 80

[tool.black]
line-length = 80
target-version = ['py38']

